fix: fix desktop spacing

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ main {
 
 footer {
   min-height: var(--footer-height);
-  font-size: 12px;
+  font-size: 13px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -48,7 +48,6 @@ footer {
 
 header {
   margin: 0 auto;
-  padding: 1.2rem 0;
 }
 
 section {
@@ -67,7 +66,7 @@ address {
 
 h1 {
   font-weight: lighter;
-  font-size: 16px;
+  font-size: 24px;
   font-family: "engravers-mt", sans-serif;
   width: 2rem;
   white-space: nowrap;
@@ -76,25 +75,35 @@ h1 {
 
 .text-container {
   display: flex;
+  width: 87%;
   flex-direction: column;
   gap: 3.2rem;
   text-align: justify;
 }
 
 @media screen and (min-width: 768px) {
+  section {
+    position: relative;
+  }
   .text-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 45%;
+    width: 80%;
     flex-direction: row;
-    padding: 5.2rem 16.2rem;
+    padding: 0 16.2rem;
+    font-size: 18px;
   }
 
   .description {
-    line-height: 19.2px;
-    height: 225px;
-    width: 374px;
+    line-height: 24px;
+    width: 90%;
   }
 
   h1 {
-    font-size: 24px;
+    font-size: 26px;
     text-align: center;
     margin-top: 4rem;
   }
@@ -102,5 +111,17 @@ h1 {
   section {
     gap: 10rem;
     padding: unset;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .text-container {
+    width: 48%;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .text-container {
+    width: 47%;
   }
 }
